pb reactor mass balance added

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "cSpell.words": [
+        "kgcat",
         "rmt",
+        "scipy",
         "sgvp"
     ],
     "python.pythonPath": "venv\\Scripts\\python.exe",
