--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,8 +3,10 @@
         "Xpoint",
         "Xpoints",
         "Ypoints",
+        "dfdx",
         "kgcat",
         "pltc",
+        "pyplot",
         "rmt",
         "scipy",
         "sgvp",
