packed-bed init

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,10 @@
 {
     "cSpell.words": [
+        "Stoch",
         "Xpoint",
         "Xpoints",
         "Ypoints",
+        "coeff",
         "dfdx",
         "kgcat",
         "pltc",
