diffusivity formula is added

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,6 +11,15 @@
             "program": "${workspaceFolder}/rmt/test_rmt.py",
             "console": "integratedTerminal",
             "python": "${command:python.interpreterPath}"
+        },
+        {
+            "name": "Test",
+            "type": "python",
+            "request": "launch",
+            "program": "${workspaceFolder}/rmt/test3.py",
+            "console": "integratedTerminal",
+            "python": "${command:python.interpreterPath}"
         }
-    ]
+    ],
+
 }
