heterogeneous packed bed reactor

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,7 +16,7 @@
             "name": "Test",
             "type": "python",
             "request": "launch",
-            "program": "${workspaceFolder}/rmt/test3.py",
+            "program": "${workspaceFolder}\\rmt\\test3.py",
             "console": "integratedTerminal",
             "python": "${command:python.interpreterPath}"
         }
