--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,9 @@
   "cSpell.words": [
     "Enskog",
     "LSODA",
+    "Nusselt",
     "PBPR",
+    "Prandtl",
     "Stoch",
     "Wilke",
     "Xpoint",
