--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,29 +1,30 @@
 {
   "cSpell.words": [
-    "Enskog",
-    "LSODA",
-    "Nusselt",
-    "PBPR",
-    "Prandtl",
-    "Stoch",
-    "Wilke",
-    "Xpoint",
-    "Xpoints",
-    "Ypoints",
     "coeff",
     "dfdx",
+    "Enskog",
     "ergun",
     "kgcat",
+    "LSODA",
     "ndarray",
+    "Nusselt",
     "omegaij",
+    "PBPR",
     "pltc",
+    "Prandtl",
     "pyplot",
+    "Radau",
     "rmt",
     "scipy",
     "sgvp",
     "sigmaij",
+    "Stoch",
+    "Wilke",
     "xlabel",
-    "ylabel"
+    "Xpoint",
+    "Xpoints",
+    "ylabel",
+    "Ypoints"
   ],
   "python.pythonPath": "venv\\Scripts\\python.exe",
   "python.analysis.extraPaths": ["rmt"]
