--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -69,7 +69,7 @@
       "python": "${command:python.interpreterPath}"
     },
     {
-      "name": "Dynamic Modeling [M7]",
+      "name": "Static Modeling [M7]",
       "type": "python",
       "request": "launch",
       "program": "${workspaceFolder}/rmt/test_rmt_DME6.py",
