--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ chrome-profiler-events*.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+*.code-workspace
 .history/*
 
 # misc
